docs/upbound-provider-azure/1.3/apimanagement/v1beta1/authorizationServer.md
---
permalink: /upbound-provider-azure/1.3/apimanagement/v1beta1/authorizationServer/
---

# apimanagement.v1beta1.authorizationServer

"AuthorizationServer is the Schema for the AuthorizationServers API. Manages an Authorization Server within an API Management Service."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withApiManagementName(apiManagementName)`](#fn-specforproviderwithapimanagementname)
    * [`fn withAuthorizationEndpoint(authorizationEndpoint)`](#fn-specforproviderwithauthorizationendpoint)
    * [`fn withAuthorizationMethods(authorizationMethods)`](#fn-specforproviderwithauthorizationmethods)
    * [`fn withAuthorizationMethodsMixin(authorizationMethods)`](#fn-specforproviderwithauthorizationmethodsmixin)
    * [`fn withBearerTokenSendingMethods(bearerTokenSendingMethods)`](#fn-specforproviderwithbearertokensendingmethods)
    * [`fn withBearerTokenSendingMethodsMixin(bearerTokenSendingMethods)`](#fn-specforproviderwithbearertokensendingmethodsmixin)
    * [`fn withClientAuthenticationMethod(clientAuthenticationMethod)`](#fn-specforproviderwithclientauthenticationmethod)
    * [`fn withClientAuthenticationMethodMixin(clientAuthenticationMethod)`](#fn-specforproviderwithclientauthenticationmethodmixin)
    * [`fn withClientId(clientId)`](#fn-specforproviderwithclientid)
    * [`fn withClientRegistrationEndpoint(clientRegistrationEndpoint)`](#fn-specforproviderwithclientregistrationendpoint)
    * [`fn withDefaultScope(defaultScope)`](#fn-specforproviderwithdefaultscope)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withDisplayName(displayName)`](#fn-specforproviderwithdisplayname)
    * [`fn withGrantTypes(grantTypes)`](#fn-specforproviderwithgranttypes)
    * [`fn withGrantTypesMixin(grantTypes)`](#fn-specforproviderwithgranttypesmixin)
    * [`fn withResourceGroupName(resourceGroupName)`](#fn-specforproviderwithresourcegroupname)
    * [`fn withResourceOwnerUsername(resourceOwnerUsername)`](#fn-specforproviderwithresourceownerusername)
    * [`fn withSupportState(supportState)`](#fn-specforproviderwithsupportstate)
    * [`fn withTokenBodyParameter(tokenBodyParameter)`](#fn-specforproviderwithtokenbodyparameter)
    * [`fn withTokenBodyParameterMixin(tokenBodyParameter)`](#fn-specforproviderwithtokenbodyparametermixin)
    * [`fn withTokenEndpoint(tokenEndpoint)`](#fn-specforproviderwithtokenendpoint)
    * [`obj spec.forProvider.apiManagementNameRef`](#obj-specforproviderapimanagementnameref)
      * [`fn withName(name)`](#fn-specforproviderapimanagementnamerefwithname)
      * [`obj spec.forProvider.apiManagementNameRef.policy`](#obj-specforproviderapimanagementnamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderapimanagementnamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderapimanagementnamerefpolicywithresolve)
    * [`obj spec.forProvider.apiManagementNameSelector`](#obj-specforproviderapimanagementnameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderapimanagementnameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderapimanagementnameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderapimanagementnameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.apiManagementNameSelector.policy`](#obj-specforproviderapimanagementnameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderapimanagementnameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderapimanagementnameselectorpolicywithresolve)
    * [`obj spec.forProvider.clientSecretSecretRef`](#obj-specforproviderclientsecretsecretref)
      * [`fn withKey(key)`](#fn-specforproviderclientsecretsecretrefwithkey)
      * [`fn withName(name)`](#fn-specforproviderclientsecretsecretrefwithname)
      * [`fn withNamespace(namespace)`](#fn-specforproviderclientsecretsecretrefwithnamespace)
    * [`obj spec.forProvider.resourceGroupNameRef`](#obj-specforproviderresourcegroupnameref)
      * [`fn withName(name)`](#fn-specforproviderresourcegroupnamerefwithname)
      * [`obj spec.forProvider.resourceGroupNameRef.policy`](#obj-specforproviderresourcegroupnamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnamerefpolicywithresolve)
    * [`obj spec.forProvider.resourceGroupNameSelector`](#obj-specforproviderresourcegroupnameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderresourcegroupnameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.resourceGroupNameSelector.policy`](#obj-specforproviderresourcegroupnameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolve)
    * [`obj spec.forProvider.resourceOwnerPasswordSecretRef`](#obj-specforproviderresourceownerpasswordsecretref)
      * [`fn withKey(key)`](#fn-specforproviderresourceownerpasswordsecretrefwithkey)
      * [`fn withName(name)`](#fn-specforproviderresourceownerpasswordsecretrefwithname)
      * [`fn withNamespace(namespace)`](#fn-specforproviderresourceownerpasswordsecretrefwithnamespace)
    * [`obj spec.forProvider.tokenBodyParameter`](#obj-specforprovidertokenbodyparameter)
      * [`fn withName(name)`](#fn-specforprovidertokenbodyparameterwithname)
      * [`fn withValue(value)`](#fn-specforprovidertokenbodyparameterwithvalue)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withAuthorizationEndpoint(authorizationEndpoint)`](#fn-specinitproviderwithauthorizationendpoint)
    * [`fn withAuthorizationMethods(authorizationMethods)`](#fn-specinitproviderwithauthorizationmethods)
    * [`fn withAuthorizationMethodsMixin(authorizationMethods)`](#fn-specinitproviderwithauthorizationmethodsmixin)
    * [`fn withBearerTokenSendingMethods(bearerTokenSendingMethods)`](#fn-specinitproviderwithbearertokensendingmethods)
    * [`fn withBearerTokenSendingMethodsMixin(bearerTokenSendingMethods)`](#fn-specinitproviderwithbearertokensendingmethodsmixin)
    * [`fn withClientAuthenticationMethod(clientAuthenticationMethod)`](#fn-specinitproviderwithclientauthenticationmethod)
    * [`fn withClientAuthenticationMethodMixin(clientAuthenticationMethod)`](#fn-specinitproviderwithclientauthenticationmethodmixin)
    * [`fn withClientId(clientId)`](#fn-specinitproviderwithclientid)
    * [`fn withClientRegistrationEndpoint(clientRegistrationEndpoint)`](#fn-specinitproviderwithclientregistrationendpoint)
    * [`fn withDefaultScope(defaultScope)`](#fn-specinitproviderwithdefaultscope)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withDisplayName(displayName)`](#fn-specinitproviderwithdisplayname)
    * [`fn withGrantTypes(grantTypes)`](#fn-specinitproviderwithgranttypes)
    * [`fn withGrantTypesMixin(grantTypes)`](#fn-specinitproviderwithgranttypesmixin)
    * [`fn withResourceOwnerUsername(resourceOwnerUsername)`](#fn-specinitproviderwithresourceownerusername)
    * [`fn withSupportState(supportState)`](#fn-specinitproviderwithsupportstate)
    * [`fn withTokenBodyParameter(tokenBodyParameter)`](#fn-specinitproviderwithtokenbodyparameter)
    * [`fn withTokenBodyParameterMixin(tokenBodyParameter)`](#fn-specinitproviderwithtokenbodyparametermixin)
    * [`fn withTokenEndpoint(tokenEndpoint)`](#fn-specinitproviderwithtokenendpoint)
    * [`obj spec.initProvider.clientSecretSecretRef`](#obj-specinitproviderclientsecretsecretref)
      * [`fn withKey(key)`](#fn-specinitproviderclientsecretsecretrefwithkey)
      * [`fn withName(name)`](#fn-specinitproviderclientsecretsecretrefwithname)
      * [`fn withNamespace(namespace)`](#fn-specinitproviderclientsecretsecretrefwithnamespace)
    * [`obj spec.initProvider.resourceOwnerPasswordSecretRef`](#obj-specinitproviderresourceownerpasswordsecretref)
      * [`fn withKey(key)`](#fn-specinitproviderresourceownerpasswordsecretrefwithkey)
      * [`fn withName(name)`](#fn-specinitproviderresourceownerpasswordsecretrefwithname)
      * [`fn withNamespace(namespace)`](#fn-specinitproviderresourceownerpasswordsecretrefwithnamespace)
    * [`obj spec.initProvider.tokenBodyParameter`](#obj-specinitprovidertokenbodyparameter)
      * [`fn withName(name)`](#fn-specinitprovidertokenbodyparameterwithname)
      * [`fn withValue(value)`](#fn-specinitprovidertokenbodyparameterwithvalue)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of AuthorizationServer

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"AuthorizationServerSpec defines the desired state of AuthorizationServer"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withApiManagementName

```ts
withApiManagementName(apiManagementName)
```

"The name of the API Management Service in which this Authorization Server should be created. Changing this forces a new resource to be created."

### fn spec.forProvider.withAuthorizationEndpoint

```ts
withAuthorizationEndpoint(authorizationEndpoint)
```

"The OAUTH Authorization Endpoint."

### fn spec.forProvider.withAuthorizationMethods

```ts
withAuthorizationMethods(authorizationMethods)
```

"The HTTP Verbs supported by the Authorization Endpoint. Possible values are DELETE, GET, HEAD, OPTIONS, PATCH, POST, PUT and TRACE."

### fn spec.forProvider.withAuthorizationMethodsMixin

```ts
withAuthorizationMethodsMixin(authorizationMethods)
```

"The HTTP Verbs supported by the Authorization Endpoint. Possible values are DELETE, GET, HEAD, OPTIONS, PATCH, POST, PUT and TRACE."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withBearerTokenSendingMethods

```ts
withBearerTokenSendingMethods(bearerTokenSendingMethods)
```

"The mechanism by which Access Tokens are passed to the API. Possible values are authorizationHeader and query."

### fn spec.forProvider.withBearerTokenSendingMethodsMixin

```ts
withBearerTokenSendingMethodsMixin(bearerTokenSendingMethods)
```

"The mechanism by which Access Tokens are passed to the API. Possible values are authorizationHeader and query."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withClientAuthenticationMethod

```ts
withClientAuthenticationMethod(clientAuthenticationMethod)
```

"The Authentication Methods supported by the Token endpoint of this Authorization Server.. Possible values are Basic and Body."

### fn spec.forProvider.withClientAuthenticationMethodMixin

```ts
withClientAuthenticationMethodMixin(clientAuthenticationMethod)
```

"The Authentication Methods supported by the Token endpoint of this Authorization Server.. Possible values are Basic and Body."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withClientId

```ts
withClientId(clientId)
```

"The Client/App ID registered with this Authorization Server."

### fn spec.forProvider.withClientRegistrationEndpoint

```ts
withClientRegistrationEndpoint(clientRegistrationEndpoint)
```

"The URI of page where Client/App Registration is performed for this Authorization Server."

### fn spec.forProvider.withDefaultScope

```ts
withDefaultScope(defaultScope)
```

"The Default Scope used when requesting an Access Token, specified as a string containing space-delimited values."

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"A description of the Authorization Server, which may contain HTML formatting tags."

### fn spec.forProvider.withDisplayName

```ts
withDisplayName(displayName)
```

"The user-friendly name of this Authorization Server."

### fn spec.forProvider.withGrantTypes

```ts
withGrantTypes(grantTypes)
```

"Form of Authorization Grants required when requesting an Access Token. Possible values are authorizationCode, clientCredentials, implicit and resourceOwnerPassword."

### fn spec.forProvider.withGrantTypesMixin

```ts
withGrantTypesMixin(grantTypes)
```

"Form of Authorization Grants required when requesting an Access Token. Possible values are authorizationCode, clientCredentials, implicit and resourceOwnerPassword."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withResourceGroupName

```ts
withResourceGroupName(resourceGroupName)
```

"The name of the Resource Group in which the API Management Service exists. Changing this forces a new resource to be created."

### fn spec.forProvider.withResourceOwnerUsername

```ts
withResourceOwnerUsername(resourceOwnerUsername)
```

"The username associated with the Resource Owner."

### fn spec.forProvider.withSupportState

```ts
withSupportState(supportState)
```

"Does this Authorization Server support State? If this is set to true the client may use the state parameter to raise protocol security."

### fn spec.forProvider.withTokenBodyParameter

```ts
withTokenBodyParameter(tokenBodyParameter)
```

"A token_body_parameter block as defined below."

### fn spec.forProvider.withTokenBodyParameterMixin

```ts
withTokenBodyParameterMixin(tokenBodyParameter)
```

"A token_body_parameter block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withTokenEndpoint

```ts
withTokenEndpoint(tokenEndpoint)
```

"The OAUTH Token Endpoint."

## obj spec.forProvider.apiManagementNameRef

"Reference to a Management in apimanagement to populate apiManagementName."

### fn spec.forProvider.apiManagementNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.apiManagementNameRef.policy

"Policies for referencing."

### fn spec.forProvider.apiManagementNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.apiManagementNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.apiManagementNameSelector

"Selector for a Management in apimanagement to populate apiManagementName."

### fn spec.forProvider.apiManagementNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.apiManagementNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.apiManagementNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.apiManagementNameSelector.policy

"Policies for selection."

### fn spec.forProvider.apiManagementNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.apiManagementNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.clientSecretSecretRef

"The Client/App Secret registered with this Authorization Server."

### fn spec.forProvider.clientSecretSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.forProvider.clientSecretSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.forProvider.clientSecretSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.forProvider.resourceGroupNameRef

"Reference to a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.resourceGroupNameRef.policy

"Policies for referencing."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.resourceGroupNameSelector

"Selector for a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.resourceGroupNameSelector.policy

"Policies for selection."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.resourceOwnerPasswordSecretRef

"The password associated with the Resource Owner."

### fn spec.forProvider.resourceOwnerPasswordSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.forProvider.resourceOwnerPasswordSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.forProvider.resourceOwnerPasswordSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.forProvider.tokenBodyParameter

"A token_body_parameter block as defined below."

### fn spec.forProvider.tokenBodyParameter.withName

```ts
withName(name)
```

"The Name of the Parameter."

### fn spec.forProvider.tokenBodyParameter.withValue

```ts
withValue(value)
```

"The Value of the Parameter."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withAuthorizationEndpoint

```ts
withAuthorizationEndpoint(authorizationEndpoint)
```

"The OAUTH Authorization Endpoint."

### fn spec.initProvider.withAuthorizationMethods

```ts
withAuthorizationMethods(authorizationMethods)
```

"The HTTP Verbs supported by the Authorization Endpoint. Possible values are DELETE, GET, HEAD, OPTIONS, PATCH, POST, PUT and TRACE."

### fn spec.initProvider.withAuthorizationMethodsMixin

```ts
withAuthorizationMethodsMixin(authorizationMethods)
```

"The HTTP Verbs supported by the Authorization Endpoint. Possible values are DELETE, GET, HEAD, OPTIONS, PATCH, POST, PUT and TRACE."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withBearerTokenSendingMethods

```ts
withBearerTokenSendingMethods(bearerTokenSendingMethods)
```

"The mechanism by which Access Tokens are passed to the API. Possible values are authorizationHeader and query."

### fn spec.initProvider.withBearerTokenSendingMethodsMixin

```ts
withBearerTokenSendingMethodsMixin(bearerTokenSendingMethods)
```

"The mechanism by which Access Tokens are passed to the API. Possible values are authorizationHeader and query."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withClientAuthenticationMethod

```ts
withClientAuthenticationMethod(clientAuthenticationMethod)
```

"The Authentication Methods supported by the Token endpoint of this Authorization Server.. Possible values are Basic and Body."

### fn spec.initProvider.withClientAuthenticationMethodMixin

```ts
withClientAuthenticationMethodMixin(clientAuthenticationMethod)
```

"The Authentication Methods supported by the Token endpoint of this Authorization Server.. Possible values are Basic and Body."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withClientId

```ts
withClientId(clientId)
```

"The Client/App ID registered with this Authorization Server."

### fn spec.initProvider.withClientRegistrationEndpoint

```ts
withClientRegistrationEndpoint(clientRegistrationEndpoint)
```

"The URI of page where Client/App Registration is performed for this Authorization Server."

### fn spec.initProvider.withDefaultScope

```ts
withDefaultScope(defaultScope)
```

"The Default Scope used when requesting an Access Token, specified as a string containing space-delimited values."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"A description of the Authorization Server, which may contain HTML formatting tags."

### fn spec.initProvider.withDisplayName

```ts
withDisplayName(displayName)
```

"The user-friendly name of this Authorization Server."

### fn spec.initProvider.withGrantTypes

```ts
withGrantTypes(grantTypes)
```

"Form of Authorization Grants required when requesting an Access Token. Possible values are authorizationCode, clientCredentials, implicit and resourceOwnerPassword."

### fn spec.initProvider.withGrantTypesMixin

```ts
withGrantTypesMixin(grantTypes)
```

"Form of Authorization Grants required when requesting an Access Token. Possible values are authorizationCode, clientCredentials, implicit and resourceOwnerPassword."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withResourceOwnerUsername

```ts
withResourceOwnerUsername(resourceOwnerUsername)
```

"The username associated with the Resource Owner."

### fn spec.initProvider.withSupportState

```ts
withSupportState(supportState)
```

"Does this Authorization Server support State? If this is set to true the client may use the state parameter to raise protocol security."

### fn spec.initProvider.withTokenBodyParameter

```ts
withTokenBodyParameter(tokenBodyParameter)
```

"A token_body_parameter block as defined below."

### fn spec.initProvider.withTokenBodyParameterMixin

```ts
withTokenBodyParameterMixin(tokenBodyParameter)
```

"A token_body_parameter block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withTokenEndpoint

```ts
withTokenEndpoint(tokenEndpoint)
```

"The OAUTH Token Endpoint."

## obj spec.initProvider.clientSecretSecretRef

"The Client/App Secret registered with this Authorization Server."

### fn spec.initProvider.clientSecretSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.initProvider.clientSecretSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.initProvider.clientSecretSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.initProvider.resourceOwnerPasswordSecretRef

"The password associated with the Resource Owner."

### fn spec.initProvider.resourceOwnerPasswordSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.initProvider.resourceOwnerPasswordSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.initProvider.resourceOwnerPasswordSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.initProvider.tokenBodyParameter

"A token_body_parameter block as defined below."

### fn spec.initProvider.tokenBodyParameter.withName

```ts
withName(name)
```

"The Name of the Parameter."

### fn spec.initProvider.tokenBodyParameter.withValue

```ts
withValue(value)
```

"The Value of the Parameter."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."